# llms-build-and-deploy

./: .dockerignore  .env.dev.cpu.example  .env.dev.example  .env.dev.gpu.example  .gitignore  Dockerfile.dev.cpu  Dockerfile.dev.gpu  Makefile  README.md  docker-compose-gpu.dev.yaml  docker-compose.dev.cpu.yaml  docker-compose.dev.gpu.yaml  docker-compose.dev.yaml  opencode.jsonc  pyproject.toml  requirements.dev.cpu.txt
api/: README.md  main.py
api/rabbitmq/: README.md  consumer.py  new_task.py  producer.py  publisher.py  receive.py  send.py  subscriber.py  worker.py
chroma/: README.md  getting_started.py  server.py
dockerfiles/: Dockerfile.chroma.dev  Dockerfile.fastapi.dev  Dockerfile.mlflow.dev  Dockerfile.mongodb.dev  Dockerfile.rabbitmq.dev  Dockerfile.worker-gpu.dev  Dockerfile.worker.dev  Dockerfile.worker.dev.cpu  Dockerfile.worker.dev.gpu  README.md
docs/: CLAUDE.md
learning/: README.md
learning/build_a_text_to_image_generator_from_scratch/: 02_build_a_transformer.ipynb  03_classify_images_with_a_vision_transformer.ipynb  README.md  chapter2_build_a_transformer.ipynb
learning/build_applications_with_ai_agents/: 02_designin_agent_systems.ipynb
learning/build_large_language_models_from_scratch/: 03_coding_attention_mechanisms.ipynb  05_pretraining_on_unlabeled_data.ipynb  06_fine_tuning_for_classification.ipynb  07_fine_tuning_to_follow_instructions.ipynb  README.md  ancillar.py
learning/hands_on_large_language_models/: README.md  (+3 more)
mlflow/: README.md  mlflow.db  ollama_tutorial.py
notebooks/: README.md
ollama_models/: Modelfile.quew38b  Modelfile.qwen25coder14b  Modelfile.qwen25coder7b
requirements/: README.md  requirements.chroma.dev.txt  requirements.fastapi.dev.txt  requirements.worker-gpu.dev.txt  requirements.worker.dev.gpu.txt  requirements.worker.dev.txt
scripts/: README.md  cpu_gpu_speed_test.py  openai_mlflow_tracking.py  start_chroma.sh
test/: test_qwen3_8b.sh
(+20 files in other folders)
