[project]
name = "llmsplay"
version = "2026.6.0"
description = "Personal playground for learning LLMs, Transformers, and AI agents"
requires-python = ">=3.11"
dependencies = [
    # OpenAI API + agents
    "openai>=1.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",

    # Experiment tracking
    "mlflow>=2.0",

    # Ollama Python client — communicates with the ollama-service container
    "ollama>=0.3",

    # Data manipulation
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.0",
    "jupyterlab>=4.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2"
]

[project.optional-dependencies]
cpu = [
    "torch>=2.5",
    "torchvision>=0.20",
    "torchaudio>=2.5",
    "lightning>=2.4",
]
gpu = [
    "torch>=2.5",
    "torchvision>=0.20",
    "torchaudio>=2.5",
    "lightning>=2.4",
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmsplay"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
